--- a/Finnish/main/MiuiScanner.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiScanner.apk/res/values-fi-rFI/strings.xml
@@ -1,10 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="accept">OK</string>
   <string name="access_sd_fail">SD-korttia ei voitu käyttää</string>
   <string name="accessibility_shutter_button">Sulkija</string>
-  <string name="action_search">Etsi</string>
   <string name="address">Osoite:</string>
+  <string name="agree_btn">Hyväksy</string>
   <string name="alisdk_message_10008_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
   <string name="alisdk_message_10008_message">生成订单地址出错, 错误信息为 {0}</string>
   <string name="alisdk_message_10008_name">GET_ORDER_URL_EXCEPTION</string>
@@ -51,8 +50,9 @@
   <string name="alisdk_message_808_name">PAY_COMMON_ERROR</string>
   <string name="alisdk_message_808_type">E</string>
   <string name="alisdk_message_809_message">使用Apliay SDK调用方法失败，请下载最新的ApliaySDK lib包或者使用H5方式付款</string>
+  <string name="aliusersdk_api_unauthorized">API未授权</string>
   <string name="aliusersdk_network_error">亲，您的手机网络不太顺畅喔~</string>
-  <string name="allow_check_website_security">Näytä verkkosivujen tietoturvatarkistuksen ilmoitukset</string>
+  <string name="amazon_assistant_shopping_title">Etsi Amazonista</string>
   <string name="app_description_content">Lukijalla voit skannata QR-koodeja, asiakirjoja, käyntikortteja ja muuta. Varmista, että et tarvitse näitä ominaisuuksia, ennen kuin poistat sovelluksen.</string>
   <string name="app_description_title">Tietoja Lukijasta</string>
   <string name="app_details">Sovellus:</string>
@@ -88,6 +88,14 @@
   <string name="back">Takaisin</string>
   <string name="barcode_into_rectangle">Aseta koodi kehyksen sisään</string>
   <string name="birthday">Syntymäpäivä:</string>
+  <string name="blog">Weibo</string>
+  <string name="business_card">Käyntikortti</string>
+  <string name="business_card_title">Aseta käyntikortti kehyksen sisälle</string>
+  <string name="business_copy">Kopioi</string>
+  <string name="business_new_contacts">Luo yhteystieto</string>
+  <string name="business_no_result">Käyntikorttia ei tunnistettu. Yritä uudelleen.</string>
+  <string name="calender">Kalenteri</string>
+  <string name="call_anyone">Soita</string>
   <string name="camera_error_title">Kamera virhe</string>
   <string name="cancel">Peruuta</string>
   <string name="choose_picture">Valitse QR-koodin kuva</string>
@@ -107,22 +115,18 @@
   <string name="com_taobao_tae_sdk_ssl_error_title">SSL证书错误</string>
   <string name="com_taobao_tae_sdk_system_exception">系统异常</string>
   <string name="common_retake_picture">Ota uudelleen</string>
-  <string name="common_retry">Yritä uudelleen</string>
   <string name="common_save">Tallenna</string>
   <string name="company">Yritys:</string>
+  <string name="confirm">OK</string>
   <string name="connect_wifi">Yhdistä tähän verkkoon</string>
   <string name="contact_details">QR-koodi yhteystieto:</string>
   <string name="continue_access_web_url">Mene verkkosivulle</string>
   <string name="continue_to_website">Mene verkkosivulle</string>
-  <string name="copy">Kopioi</string>
   <string name="copy_text">Kopioi teksti</string>
   <string name="copy_text_success">Teksti kopioitu</string>
   <string name="crop_cancel_description">Peruuta</string>
   <string name="crop_done_description">Valmis</string>
-  <string name="crop_title_study">Rajaa valokuva</string>
   <string name="crop_title_translation">Valitse käännettävä teksti</string>
-  <string name="dialog_dismiss">Hylkää</string>
-  <string name="dialog_report">Raportoi</string>
   <string name="document_color_picture">Väri</string>
   <string name="document_color_picture_tip">Muunnetaan värilliseksi…</string>
   <string name="document_crop_title">Rajaa asiakirja</string>
@@ -142,84 +146,69 @@
   <string name="document_top_panel_title">Asiakirjasta kuva</string>
   <string name="done">Valmis</string>
   <string name="drag_barcode_into_frame">Vedä kehys sopivaksi, jotta koodi mahtuu</string>
+  <string name="drag_crop_to_business_card">Rajaa liikuttamalla</string>
   <string name="email">Sähköposti:</string>
   <string name="error_camera_disabled">Pääsy kameraan on estetty tietoturvan vuoksi</string>
   <string name="error_cannot_connect_camera">Kameraan ei saada yhteyttä</string>
-  <string name="error_day_limit">Liian monta yrityskertaa yhden päivän aikana</string>
-  <string name="error_empty_result">Tuloksia ei löytynyt</string>
   <string name="error_get_image">Kuvaa ei voitu hakea</string>
-  <string name="error_hour_limit">Liian monta yrityskertaa yhden tunnin aikana</string>
-  <string name="error_image_error">Tätä kuvaa ei tunnisteta</string>
-  <string name="error_invalid_request">Tunnistusvirhe</string>
   <string name="error_media_storage_failure">Kuvaa ei voitu tallentaa</string>
-  <string name="error_minute_limit">Liian monta yrityskertaa yhden minuutin aikana</string>
   <string name="error_permissions">Lukijalla ei ole tarvittavia käyttöoikeuksia toimiakseen normaalisti. Siirry Asetuksiin ja tarkasta käyttöoikeudet jatkaaksesi.</string>
-  <string name="error_server_error">Palvelinvirhe</string>
+  <string name="fax">Faksi</string>
   <string name="feed_search_fail">Ei tuloksia, yritä uudelleen</string>
   <string name="feedback_description_camera_access">Lukija ei saa yhteyttä Kameraan</string>
   <string name="feedback_description_save_photo">Kuvaa tai videota ei voitu tallentaa</string>
-  <string name="flash_lable">Salama</string>
+  <string name="got_it">Selvä</string>
+  <string name="gps">Navigoi</string>
   <string name="image_file_name_format">"'lukija'_yyyyMMdd_HHmmss"</string>
   <string name="import_contact">Tuo yhteystieto</string>
-  <string name="impunity_declaration_content">Tämä sovellus tarvitsee internet-yhteyden ja pääsyn sijaintitietoihin toimiakseen normaalisti.</string>
+  <string name="impunity_declaration_content">Lukija tarvitsee luvan käyttää kameraasi ja ottaa kuvia. Lukijan täytyy myös yhdistää internetiin toimiakseen normaalisti. Oletetaan, että olet lukenut ja hyväksynyt %1$sTietosuojakäytäntömme%2$s, kun napautat \"Hyväksyn\"-painiketta alapuolella.</string>
   <string name="impunity_declaration_negative_text">Poistu</string>
   <string name="impunity_declaration_positive_text">Salli</string>
-  <string name="impunity_declaration_title">Palveluehdot</string>
+  <string name="impunity_declaration_title">Tietosuojakäytäntö</string>
   <string name="init_success">初始化完成</string>
   <string name="jszc">手机淘宝拍立淘提供技术支持</string>
   <string name="jzz">加载中</string>
   <string name="keywords_search_code">Lukija;Lue;QR koodi;QR;Tunnistus;Viivakoodi;Viivakoodit;Tuote;Tuotteet;Alipay;WeChat;Kuinka luen QR koodin;Kuinka luen viivakoodin;Kuinka skannaan;MIUI Lukija</string>
   <string name="keywords_search_document">Lukija;Lue asiakirja;Lue asiakirjoja;OCR;Lue tekstiä;Lue</string>
-  <string name="keywords_search_namecard">Lukija;Käyntikortti;Käyntikortit;Lue;Lue kortit;Kortti;Kortit;Yhteystiedot;Yhteystieto</string>
   <string name="keywords_search_settings">Lukija;Lukijan verkkoasetukset</string>
   <string name="keywords_search_shopping">Ostelu;Lukija;Lue tuotteita;Lue tuote;Tarkista hinta;Tuotteet;Taobao;Tmall;Hinnat;Online ostelua</string>
-  <string name="keywords_search_study">Lukija;Ongelmat;Ratkaise ongelmia;Kotitehtävät;Koulu;Fysiikka;Kemia;Matematiikka;Matematiikat;Englanti;Historia;Kiina</string>
   <string name="keywords_search_translation">Lukija;Käännä;Sanakirja;Englanti;Ulkomaan kieli;Kieli;Kielet;Englannista Kiinaksi;Italialainen;Saksalainen;Japanilainen;Korealainen;Espanjalainen;Ranskalainen;Baidu Kääntäjä;Youdao Sanakirja;Baidu Sanakirja;Google Kääntäjä</string>
   <string name="label_choose_picture">Valitse kuva</string>
   <string name="label_flash_light">Taskulamppu</string>
   <string name="language_entry_chinese_cn">Yksinkertaistettu kiina</string>
-  <string name="language_entry_chinese_tw">Perinteinen kiina</string>
-  <string name="language_entry_danish">Tanska</string>
-  <string name="language_entry_dutch">Hollanti</string>
   <string name="language_entry_english">Englanti</string>
-  <string name="language_entry_finnish">Suomi</string>
   <string name="language_entry_french">Ranska</string>
   <string name="language_entry_german">Saksa</string>
-  <string name="language_entry_hungarian">Unkari</string>
-  <string name="language_entry_italian">Italia</string>
   <string name="language_entry_japanese">Japani</string>
   <string name="language_entry_korean">Korea</string>
-  <string name="language_entry_norwegian">Norja</string>
-  <string name="language_entry_portuguese">Portugali</string>
-  <string name="language_entry_russian">Venäjä</string>
   <string name="language_entry_spanish">Espanja</string>
-  <string name="language_entry_swedish">Ruotsi</string>
-  <string name="low_version_tip">MIUI versio on liian vanha. Päivitä MIUI käyttääksesi Lukijaa.</string>
+  <string name="low_version_tip">Päivitä MIUI viimeisimpään versioon käyttääksesi Lukijaa.</string>
+  <string name="miracast_connect">Suoratoista</string>
+  <string name="miracast_connect_fail">Suoratoistaminen epäonnistui, yritä uudelleen</string>
+  <string name="miracast_connecting">Suoratoistetaan…</string>
+  <string name="miracast_details">Lue QR-koodi suoratoistaaksesi</string>
+  <string name="miracast_message">Suoratoistetaanko kohteeseen %s?</string>
+  <string name="miracast_switch_off">Langaton näyttö on pois käytöstä</string>
+  <string name="miracast_switch_tip">Käyttääksesi tätä toimintoa, ota langaton näyttö käyttöön</string>
+  <string name="module_title_business_card">Käyntikortti</string>
   <string name="module_title_code">QR-koodi</string>
   <string name="module_title_document">Asiakirja</string>
-  <string name="module_title_namecard">Käyntikortti</string>
   <string name="module_title_shopping">Ostokset</string>
-  <string name="module_title_study">Tutkimus</string>
   <string name="module_title_translation">Käännä</string>
   <string name="name">Nimi:</string>
-  <string name="namecard_recognize_failed_tip">Korttia ei tunnistettu</string>
-  <string name="namecard_recognizing">Tunnistetaan…</string>
-  <string name="namecard_title">Aseta kortti kehyksen sisälle</string>
-  <string name="namecard_vendor_info">Teknisen tuen tarjoaa CamCard</string>
+  <string name="new_schedule">Luo tapahtuma</string>
   <string name="nickname">Lempinimi:</string>
   <string name="nljzz">努力加载中</string>
   <string name="no_network">Verkkoyhteyttä ei voi muodostaa</string>
   <string name="no_storage">Asenna SD-kortti ennen Kameran käyttöä</string>
   <string name="not_insert_contact">Yhteystietoa ei voi lisätä</string>
   <string name="not_recommend_access_web_url">Mene silti</string>
-  <string name="not_tips">Älä näytä uudelleen</string>
   <string name="note">Huomautus:</string>
+  <string name="open_url">Avaa URL-osoite</string>
   <string name="pailitao">淘宝拍立淘</string>
   <string name="path_scanner_setting">Järjestelmäsovellukset/Lukija</string>
-  <string name="payment_weixin">WeChat</string>
-  <string name="payment_zhifubao">AliPay</string>
+  <string name="payment_text">Avaa sovelluksella %s</string>
   <string name="phone">Puhelin:</string>
-  <string name="picker_lable">Kuva</string>
   <string name="place_barcode_into_rectangle">Aseta koodi kehyksen sisälle</string>
   <string name="pref_camera_jpeg_quality_fine">hyvä</string>
   <string name="pref_camera_jpeg_quality_normal">normaali</string>
@@ -227,35 +216,35 @@
   <string name="preparing_sd">Valmistellaan SD-korttia…</string>
   <string name="previous">Takaisin</string>
   <string name="qr_code_details">QR-koodin tiedot:</string>
-  <string name="recognition_error_download_cancel">Myöhemmin</string>
-  <string name="recognition_error_download_data_msg">Lataa tunnistusmoottori skannataksesi kortteja. Sen koko on noin 15 Mt. Käytetäänkö lataamiseen mobiilidataa?</string>
-  <string name="recognition_error_download_fail">Tunnistusmoottorin lataaminen epäonnistui</string>
-  <string name="recognition_error_download_msg">Lataa tunnistusmoottori skannataksesi kortteja. Sen koko on noin 15 Mt.</string>
-  <string name="recognition_error_download_no_network">Lataaminen epäonnistui. Varmista, että olet yhteydessä verkkoon.</string>
-  <string name="recognition_error_download_ok">Lataa</string>
-  <string name="recognition_error_download_success">Ladattiin onnistuneesti</string>
-  <string name="recognition_error_download_title">Tunnistusmoottori vaaditaan</string>
-  <string name="recognition_error_downloading">Ladataan tunnistusmoottoria…</string>
   <string name="recognize">Skannaa</string>
   <string name="recognize_fail">Koodia ei voitu lukea</string>
-  <string name="scan_fail">Koodia ei voitu lukea</string>
+  <string name="refresh">刷新</string>
   <string name="scan_result">Tulos</string>
   <string name="sdk_not_ready">Valmistellaan SDK:ta. Yritä myöhemmin uudelleen.</string>
   <string name="secure_access_web_url">Mene verkkosivulle</string>
   <string name="see_app_details">Näytä sovelluksen tiedot</string>
-  <string name="settings">Asetukset</string>
+  <string name="select_dialog_confirm">OK</string>
+  <string name="send_mail">Lähetä sähköposti</string>
   <string name="shopping_searching">Etsitään tuotteita…</string>
   <string name="shopping_title">Ota tuotteesta kuva</string>
   <string name="shopping_vendor_info">Teknisen tuen tarjoaa Taobao</string>
   <string name="spaceIsLow_content">SD-kortilla ei ole tarpeeksi tallennustilaa. Vapauta tilaa.</string>
-  <string name="study_report_title">Raportoi</string>
-  <string name="study_rotate_picture">Kuvaa prosessoidaan</string>
-  <string name="study_scan_result">Tulos</string>
-  <string name="study_searching">Etsitään tulosta</string>
-  <string name="study_title">Ota ongelmasta kuva</string>
-  <string name="study_vendor_info">Teknisen tuen tarjoaa Master Learner</string>
-  <string name="tips_message">Yhdistä internetiin tarkistaaksesi, onko verkkosivu turvallinen.</string>
+  <string name="switch_open">Ota käyttöön</string>
+  <string name="tel">Puhelin</string>
   <string name="title">Otsikko:</string>
+  <string name="translate_auto_lock">Lukitse käännös</string>
+  <string name="translate_auto_unlock">Avaa käännös</string>
+  <string name="translate_copy_success">Kopioitiin onnistuneesti</string>
+  <string name="translate_dest_lang">Kohdekieli</string>
+  <string name="translate_fail">Kääntäminen epäonnistui</string>
+  <string name="translate_loading">Käännetään…</string>
+  <string name="translate_save_fail">Muistiota ei voitu tallentaa</string>
+  <string name="translate_src_lang">Lähdekieli</string>
+  <string name="translate_text_compare">Vertailu</string>
+  <string name="translate_text_compare_copy">Kopioi</string>
+  <string name="translate_text_compare_save">Tallenna</string>
+  <string name="translate_try_again">Yritä uudelleen napauttamalla</string>
+  <string name="translate_type_take_pic">Kuva</string>
   <string name="translation_language_chinese">zh</string>
   <string name="translation_language_english">en</string>
   <string name="translation_language_french">fr</string>
@@ -265,11 +254,8 @@
   <string name="translation_language_spanish">es</string>
   <string name="translation_prompt_cannot_find">Sanaa tai lausetta ei löytynyt</string>
   <string name="translation_prompt_maintain_level">Tekstin täytyy olla rinnakkain tämän linjan kanssa</string>
-  <string name="translation_prompt_recapture">Kuva on epäselvä, ota kuva uudelleen</string>
   <string name="translation_prompt_sentence">Valitse käännettävä teksti</string>
   <string name="translation_prompt_translating">Käännetään…</string>
-  <string name="translation_prompt_translating_sentence">Käännetään…</string>
-  <string name="translation_prompt_translating_word">Tunnistetaan…</string>
   <string name="translation_prompt_word">Aseta sana kehyksen sisälle</string>
   <string name="translation_see_more">Katso määritelmä</string>
   <string name="translation_type_sentence">Lause</string>
@@ -279,11 +265,11 @@
   <string name="url_is_unknown">Tämän verkkosivun turvallisuutta ei voida tarkistaa</string>
   <string name="url_is_unsafety">Tämä verkkosivu ei ole turvallinen</string>
   <string name="vender_info_translation_kingsoft">Teknisen tuen tarjoaa Kingsoft</string>
-  <string name="view_study_report">Näytä raportti</string>
   <string name="web">Verkkosivu:</string>
   <string name="website_details">Verkkosivu:</string>
-  <string name="weixin_code_tip">Käytä WeChat sovellusta skannataksesi tämä QR-koodi</string>
+  <string name="weixin_code_tip">Skannaa tämä QR-koodi käyttäen WeChattiä</string>
   <string name="wifi_details">W-Fi:</string>
+  <string name="wifi_exist_fail">Wi-Fi-hotspot \"%1$s\" on jo olemassa. Poista se ja yritä uudelleen.</string>
   <string name="wifi_open_fail">Wi-Fiä ei voi ottaa käyttöön</string>
   <string name="wifi_pwd">Salasana:</string>
   <string name="wifi_security">Turvallisuus:</string>
